# AEOS

./: .editorconfig  .gitignore  ARCHITECTURE.md  CONSTITUTION.md  MANIFESTO.md  QUICKSTART.md  README.md  aeos.toml  pyproject.toml
.aeos/verification/: cap-2-e.verify.toml
bootstrap/: bootstrap.sh
docs/agents/: AGENT-ROADMAP.md  AGENT-SAFETY-GATES.md  FRONTIER-AI-ESCALATION.md  LOCAL-AI-ASSISTANT-POLICY.md
docs/architecture/: AEOS-ENGINEERING-MODEL.md  AI-RUNTIME-DOCTRINE.md  PROPOSAL-LIFECYCLE.md
docs/evidence/: AEOS-AGENT-WORKFLOW-EVIDENCE.md  AEOS-AGENTIC-WORKSPACE-EVIDENCE.md  AEOS-CONTROLLED-PR-MANAGEMENT-EVIDENCE.md  AEOS-MVP-UI-COMPLETION.md  AEOS-UI-END-TO-END-DEMO.md
docs/features/: AEOS-AGENT-PLANNER.md  AEOS-AGENT-PR-PROPOSAL.md  AEOS-AGENT-RECOMMENDATIONS.md  AEOS-MEMORY-LAYER.md  AEOS-PORTFOLIO.md  AEOS-RECLAIM-HARDEN.md  AEOS-RECLAIM-RECOVERY.md  AEOS-WORKSPACE-DOCTOR.md
docs/operations/: AEOS-CTO-HANDOFF.md  AEOS-MULTI-AGENT-WORKFLOW.md  AEOS-NEXT-ACTIONS.md  AEOS-SPRINT-LOG.md
docs/research/: AEOS-RESEARCH-BACKLOG-LOCAL-FIRST-SOVEREIGNTY.md  XIGH-REPOSITORIES-AEOS-INSPIRATIONS.md
docs/strategy/: AEOS-MVP-1.0.md  AEOS-PRODUCT-RAILS-AND-AGENTS.md  AEOS-PRODUCT-VISION.md  AEOS-SOVEREIGNTY-MODEL.md
src/aeos/: __init__.py  __main__.py  cli.py
src/aeos/agent/: __init__.py  apply_engine.py  planner.py  pr_management.py  pr_proposal.py
src/aeos/ai/: __init__.py  config.py  doctor.py  local.py  router.py
src/aeos/brain/: __init__.py  assembler.py  extractor.py  models.py  prompt.py  store.py
src/aeos/generators/: __init__.py  base.py  basic.py
src/aeos/memory/: __init__.py  compare.py  models.py  store.py  timeline.py
src/aeos/onboarding/: __init__.py  checker.py
src/aeos/project/: __init__.py  registry.py
src/aeos/providers/supabase/: __init__.py
src/aeos/providers/supabase/rls/: __init__.py  inspector.py
src/aeos/reclaim/: __init__.py  hardener.py
src/aeos/security/: __init__.py  checker.py
src/aeos/sovereignty/: checker.py
src/aeos/ui/: __init__.py  evidence_pack.py  portfolio.py  workspace.py
src/aeos/verify/: __init__.py  runner.py  spec.py
src/aeos/workspace/: __init__.py  doctor.py
tests/fixtures/realistic_projects/lovable_supabase_vercel/src/: App.tsx  auth.ts
tests/fixtures/supabase_rls/supabase/migrations/: 001_foundation.sql  002_content_tables.sql  003_additional_patterns.sql
tests/integration/: test_external_project_audit.py  test_rls_external.py
tests/unit/: test_agent_planner.py  test_agent_pr_management.py  test_agent_pr_proposal.py  test_agent_recommendations.py  test_ai.py  test_apply_engine.py  test_brain_assembler.py  test_brain_extractor.py  test_brain_prompt.py  test_brain_store.py  test_cli.py  test_cli_agent_pr_apply.py  test_cli_brain.py  test_cli_brain_ask.py  test_cli_brain_build.py  test_cli_brain_context.py  test_generators.py  test_memory_compare.py  test_memory_store.py  test_memory_timeline.py  test_onboarding.py  test_pr_proposal_in_workspace.py  test_project_registry.py  test_reclaim_hardener.py  test_rls_generate_output.py  test_rls_inspector.py  test_security.py  test_sovereignty.py  test_ui_portfolio.py  test_verify.py  test_version.py  test_workspace_demo.py  test_workspace_doctor.py
